Add more to the explanation of prefixes

--- a/.helix/languages.toml
+++ b/.helix/languages.toml
@@ -6,3 +6,7 @@ auto-format = true
 [language-server.ruff]
 command = "uv"
 args = ["run", "ruff", "server"]
+
+[[language]]
+name = "markdown"
+text-width = 72
